src/objects/ints__TUCR_Trade__c.object
<CustomObject>
    <fields>
        <fullName>ints__Account__c</fullName>
        <label>Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DateLastActivity__c</fullName>
        <label>Date Last Activity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateOpened__c</fullName>
        <label>Date Opened</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateRevised__c</fullName>
        <label>Date Revised</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__HighCredit__c</fullName>
        <label>High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Joint__c</fullName>
        <label>Joint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MOP__c</fullName>
        <label>MOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__MemberCode__c</fullName>
        <label>Member Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MemberName__c</fullName>
        <label>Member Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MonthsReviewed__c</fullName>
        <label>Months Reviewed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Narrative1__c</fullName>
        <label>Narrative 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Narrative2__c</fullName>
        <label>Narrative 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__PastDue__c</fullName>
        <label>Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__PaymentPatternStartDate__c</fullName>
        <label>Payment Pattern Start Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__PaymentPattern__c</fullName>
        <label>Payment Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Plus30__c</fullName>
        <label>Plus30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Plus60__c</fullName>
        <label>Plus60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Plus90__c</fullName>
        <label>Plus90</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipName>Trades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TUCR Trade</label>
    <nameField>
        <displayFormat>TUCR_TR-{000000000}</displayFormat>
        <label>Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Trades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>